SUBDIRS = items editor xslt

MAINTAINERCLEANFILES= Makefile.in

variousdir = $(datadir)/lordsawar/various
various_DATA = \
    arrows.png \
    arrows-medium.png \
    waypoints.png \
    buttons.png \
    buttons-medium.png \
    city_occupied.png \
    medals_mask.png \
    bigmedals.png \
    ship.png \
    recruit_female.png \
    recruit_male.png \
    ruin_1.png \
    ruin_2.png \
    splash_screen.jpg \
    win.png \
    lordsawar_logo.png \
    hero.png \
    bag.png \
    hero-inactive.png \
    prodshieldset.png \
    prodshieldset-medium.png \
    smallruinedcity.png \
    movebonus.png \
    smallunexploredruin.png \
    smallunexploredstronghold.png \
    smallexploredruin.png \
    smalltemple.png \
    cursors.png \
    smallupkeep.png \
    smallincome.png \
    smalldefense.png \
    smalltreasury.png \
    smallcity.png \
    diplomacy-small.png \
    diplomacy-large.png \
    castle_icon.png \
    tileset_icon.png \
    parley_offered.png \
    parley_refused.png \
    background.png \
    back.bmp \
    hero-newlevel-female.png \
    hero-newlevel-male.png \
    tilestyles.png

EXTRA_DIST = \
    README \
    arrows.png \
    arrows-medium.png \
    waypoints.png \
    buttons.png \
    buttons-medium.png \
    city_occupied.png \
    medals_mask.png \
    bigmedals.png \
    ship.png \
    recruit_female.png \
    recruit_male.png \
    ruin_1.png \
    ruin_2.png \
    splash_screen.jpg \
    win.png \
    lordsawar_logo.png \
    hero.png \
    bag.png \
    hero-inactive.png \
    prodshieldset.png \
    prodshieldset-medium.png \
    smallruinedcity.png \
    movebonus.png \
    smallunexploredruin.png \
    smallunexploredstronghold.png \
    smallexploredruin.png \
    smalltemple.png \
    cursors.png \
    smallupkeep.png \
    smallincome.png \
    smalldefense.png \
    smalltreasury.png \
    smallcity.png \
    diplomacy-small.png \
    diplomacy-large.png \
    castle_icon.png \
    tileset_icon.png \
    parley_offered.png \
    parley_refused.png \
    background.png \
    back.bmp \
    hero-newlevel-female.png \
    hero-newlevel-male.png \
    tilestyles.png
