MAINTAINERCLEANFILES= Makefile.in

editordir = $(datadir)/lordsawar/various/editor
editor_DATA = button_selector.png \
			button_1x1.png \
			button_2x2.png \
			button_3x3.png \
			button_6x6.png \
			button_12x12.png \
			button_castle.png \
			button_erase.png \
			button_blank.png \
			button_signpost.png \
			button_ruin.png \
			button_road.png \
			button_temple.png \
			button_stack.png \
			button_bridge.png \
			button_port.png \
			button_bag.png \
			button_move.png

EXTRA_DIST = $(editor_DATA) README
